--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="website icon" type="png"
+     href="tres-en-raya.png">
     <link rel="stylesheet" href="style.css">
-    <title>Pagina</title>
+    <title>Tres en rayas</title>
 </head>
 <body>
     <h1>Juego tres en raya</h1>
